# Forge-RL

./: .cache_7dmn8h  .dockerignore  .env.example  .gitignore  .graphify_detect.json  .graphify_python  Dockerfile  HACKATHON_README.md  LICENSE  README.md  REAL_WORLD_IMPACT.md  SKILLS_REQUIRED.md  TECH_STACK.md  __init__.py  app.patch  app.py  app_head.py  blog_post.md  bridge.py  budget_penalty.py  claim_graph.py  client.py  config.py  conftest.py  create_clean_zip.py  demo.py  disarm_registry.json  docker-compose.yml  episode_output.py  fix_cell1.py  fix_cell6.py  fix_gen_batch.py  fix_grpo_colab.py  fix_kaggle.py  fix_notebooks.py  fix_p100.py  fix_trl_forge.py  forge_env.py  forge_policy.json  generate_placeholder_results.py  (+48 more)
.claude/: settings.local.json
Docx/: FORGE_MA_PRD_v6_FINAL.docx  FORGE_MA_PRD_v7.docx  FORGE_MA_PRD_v9_FINAL.docx
agent_exp/: expert_reviewer_agent.py  narrative_critic.py  negotiated_search.py
agents/: __init__.py  blue_ppo_agent.py  expert_reviewer_agent.py  gnn_policy.py  heuristic_agent.py  llm_agent.py  llm_agent_ma.py  ppo_agent.py  random_agent.py
baselines/: demo_trace.json  results.json
blue_team/: __init__.py  gin_predictor.py  narrative_critic.py  negotiated_search.py  replay_buffer.py  society_of_thought.py
docs/: blog_post.md
env/: __init__.py  bridge.py  claim_graph.py  claim_graph_ma.py  episode_output.py  forge_env.py  misinfo_env.py  node_features.py  oversight_report.py  report_manager.py  reward.py
env_exp/: action_validator.py  forge_env.py  misinfo_env.py  primitives.py
frontend/: package-lock.json  package.json
infra_exp/: cache_manager.py  eval.py  evaluator.py  grade.py  mock_data.py  pipeline.py  schemas.py
logic_exp/: network_cluster.py  tactic_pr.py
ml/: deepfake_training.ipynb
notebooks/: forge_combined_selfplay (1).ipynb  trl_forge_ma.ipynb
red_team/: __init__.py  hae_model.py  red_agent.py
rewards/: __init__.py  budget_penalty.py  hierarchical_reward.py  plausibility.py  red_step_reward.py  reward_types.py  tactic_edit_dist.py  tactic_pr.py  validate.py
runtime/: __init__.py  blue_gin.py
scratch/: test_import.py
script_exp/: demo.py
scripts/: check_apis.py  claimbuster_eval.py  compress_submission.py  demo_investigation.py  download_liar.py  inference.py  publish_blog.py  run_baseline.py  run_hf_space.py  run_selfplay.py  verify_full_system.py
server/: __init__.py  app.py  forge_environment.py  main.py  requirements.txt  schemas.py  state.py
spatial-saas/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
task_exp/: task_satire_news.py
test_exp/: test_agent_sync.py  test_layer5_rewards.py  test_layer7_training.py  test_primitives.py
tests/: conftest.py  test_agent_sync.py  test_bridge.py  test_graders.py  test_layer4_red_team.py  test_layer5_rewards.py  test_layer9_evaluation.py
tools/: __init__.py  cross_reference.py  entity_link.py  query_source.py  temporal_audit.py  tool_registry.py  trace_origin.py
train_exp/: curriculum.py  gin_trainer_ma.py  pretrain.py
(+71 files in other folders)
