[project]
name = "forge-ma"
version = "1.0.0"
description = "Adversarial misinformation forensics RL environment — OpenEnv compatible"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "groq>=0.4.0",
    "numpy>=1.24.0",
]

[project.scripts]
server = "server.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"